# medicare_ai

./: pyproject.toml
backend/app/: config.py  main.py
backend/app/chains/: analysis_chain.py  chat_chain.py
backend/app/models/: schemas.py
backend/app/routes/: analysis.py  health.py  research.py
backend/app/services/: gemini_service.py  tavily_service.py
