[project]
name = "medicare-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.118.0",
    "langchain>=0.3.27",
    "langchain-core>=0.3.78",
    "langchain-google-genai>=2.1.12",
    "pillow>=11.3.0",
    "pydantic>=2.11.10",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "tavily-python>=0.7.12",
    "uvicorn>=0.37.0",
]
